fix modal jump

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -4,6 +4,7 @@ html
   font-family: "Roboto", "Arial", sans-serif
   height: 100%
   overflow-x: hidden
+  margin-right: calc(-1 * (100vw - 100%))
 
 body
   margin: 0
