--- a/src/style/swiper.sass
+++ b/src/style/swiper.sass
@@ -1,5 +1,5 @@
 .swiper-container
-  width: 1366px
+  width: 1365px
   @media (max-width: 1023px)
     width: 768px
   @media (max-width: 767px)
